--- a/package.json
+++ b/package.json
@@ -29,12 +29,10 @@
     "esm": "^3.2.25",
     "mocha": "^6.1.4",
     "mocha-junit-reporter": "^1.23.1",
-    "mocha-multi-reporters": "^1.1.7",
-    "test": "^0.6.0"
+    "mocha-multi-reporters": "^1.1.7"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
-    "growl": "^1.10.5",
     "lite-server": "^2.5.3"
   }
 }
