--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "TODO: REPLACE ALL LambdaSchool AND JS-Exercise-Prototype BELOW",
   "main": "index.js",
-  "homepage": "https://codesandbox.io/s/github/LambdaSchool/JS-Exercise-Prototype?previewwindow=tests",
+  "homepage": "https://codesandbox.io/s/github/LambdaSchool/JS-Exercise-Prototype",
   "repository": {
     "url": "git@github.com:LambdaSchool/JS-Exercise-Prototype.git",
     "type": "git"
@@ -13,7 +13,7 @@
     "start": "NODE_OPTIONS=--no-warnings ./node_modules/.bin/mocha ./test",
     "pretest": "NODE_OPTIONS=--no-warnings npm install > /dev/null",
     "test": "NODE_OPTIONS=--no-warnings ./node_modules/.bin/mocha ./test",
-    "test:watch": "./node_modules/.bin/mocha --growl --reporter=list --bail --watch './test'"
+    "test:watch": "./node_modules/.bin/mocha --growl --reporter=list --watch './test'"
   },
   "keywords": [
     "object",
