--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-exercise-prototype",
   "version": "1.0.0",
-  "description": "TODO: REPLACE ALL LambdaSchool AND JS-Exercise-Prototype BELOW",
+  "description": "",
   "main": "index.js",
   "homepage": "https://codesandbox.io/s/github/LambdaSchool/JS-Exercise-Prototype",
   "repository": {
